@@ -198,6 +198,9 @@ Bug Fixes
 * SOLR-10383: Fix debug related NullPointerException in solr/contrib/ltr OriginalScoreFeature class.
   (Vitezslav Zak, Christine Poerschke)
 
+* SOLR-10416: The JSON output of /admin/metrics is fixed to write the container as a
+  map (SimpleOrderedMap) instead of an array (NamedList). (shalin)
+
 ==================  6.5.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.
